prompt injection tutorial changes

--- a/examples/checks/safeguarding/system_prompt_injection.ipynb
+++ b/examples/checks/safeguarding/system_prompt_injection.ipynb
@@ -157,7 +157,7 @@
     "from uptrain import EvalLLM, Evals, Settings\n",
     "import json\n",
     "\n",
-    "OPENAI_API_KEY = \"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\"  # Insert your OpenAI key here\n",
+    "OPENAI_API_KEY = \"sk-****************\"  # Insert your OpenAI key here\n",
     "\n",
     "# eval_llm = EvalLLM(openai_api_key=OPENAI_API_KEY)\n",
     "eval_llm = EvalLLM(\n",
