minor spelling changes

--- a/docs/integrations/observation-tools/langfuse.mdx
+++ b/docs/integrations/observation-tools/langfuse.mdx
@@ -12,7 +12,7 @@ This notebook demonstrates how to use Langfuse to create traces and evaluate usi
 ### Setup
 **Enter your Langfuse API keys and OpenAI API key**
 
-You can get your Langfure API keys [here](https://cloud.langfuse.com/) and OpenAI API key [here](https://platform.openai.com/api-keys)
+You can get your Langfuse API keys [here](https://cloud.langfuse.com/) and OpenAI API key [here](https://platform.openai.com/api-keys)
 
 ```python
 %pip install langfuse datasets uptrain litellm openai --upgrade
