minor spelling changes

--- a/examples/integrations/observation_tools/langfuse.ipynb
+++ b/examples/integrations/observation_tools/langfuse.ipynb
@@ -55,7 +55,7 @@
       "source": [
         "## Enter your Langfuse API keys and OpenAI API key\n",
         "\n",
-        "You can get your Langfure API keys [here](https://cloud.langfuse.com/) and OpenAI API key [here](https://platform.openai.com/api-keys)"
+        "You can get your Langfuse API keys [here](https://cloud.langfuse.com/) and OpenAI API key [here](https://platform.openai.com/api-keys)"
       ]
     },
     {
