--- a/docs/predefined-evaluations/overview.mdx
+++ b/docs/predefined-evaluations/overview.mdx
@@ -32,6 +32,10 @@ You can choose evals as per your needs. We have divided them into a few categori
 |[Context Relevance](/predefined-evaluations/context-awareness/context-relevance) | Grades how relevant the context was to the question specified. |
 |[Context Utilization](/predefined-evaluations/context-awareness/context-utilization) | Grades how complete the generated response was for the question specified given the information provided in the context. |
 |[Factual Accuracy](/predefined-evaluations/context-awareness/factual-accuracy)| Grades whether the response generated is factually correct and grounded by the provided context.|
+|[Context Conciseness](/predefined-evaluations/context-awareness/context-conciseness)| Evaluates the concise context cited from an original context for irrelevant information.
+|[Context Reranking](/predefined-evaluations/context-awareness/context-reranking)| Evaluates how efficient the reranked context is compared to the original context.|
+
+
   </Accordion>
 
   <Accordion title="Language Quality Evals">
