subquery completeness docs and tutorial

--- a/docs/predefined-evaluations/overview.mdx
+++ b/docs/predefined-evaluations/overview.mdx
@@ -77,5 +77,11 @@ You can choose evals as per your needs. We have divided them into a few categori
 |[Jailbreak Detection](/predefined-evaluations/safeguarding/jailbreak) | Grades whether the user's prompt is an attempt to jailbreak (i.e. generate illegal or harmful responses). |
   </Accordion>
 
+    <Accordion title="Sub-Query Evals">
+| Eval | Description |
+| ---- | ----------- |
+|[Sub-query Completeness](/predefined-evaluations/sub-query/sub-query-completeness) | Evaluate if the list of generated sub-questions comprehensively cover all aspects of the main question. |
+  </Accordion>
+
   
 </AccordionGroup>
