--- a/docs/predefined-evaluations/overview.mdx
+++ b/docs/predefined-evaluations/overview.mdx
@@ -32,6 +32,10 @@ You can choose evals as per your needs. We have divided them into a few categori
 |[Context Relevance](/predefined-evaluations/context-awareness/context-relevance) | Grades how relevant the context was to the question specified. |
 |[Context Utilization](/predefined-evaluations/context-awareness/context-utilization) | Grades how complete the generated response was for the question specified given the information provided in the context. |
 |[Factual Accuracy](/predefined-evaluations/context-awareness/factual-accuracy)| Grades whether the response generated is factually correct and grounded by the provided context.|
+|[Context Conciseness](/predefined-evaluations/context-awareness/context-conciseness)| Evaluates the concise context cited from an original context for irrelevant information.
+|[Context Reranking](/predefined-evaluations/context-awareness/context-reranking)| Evaluates how efficient the reranked context is compared to the original context.|
+
+
   </Accordion>
 
   <Accordion title="Language Quality Evals">
@@ -71,6 +75,12 @@ You can choose evals as per your needs. We have divided them into a few categori
 | ---- | ----------- |
 |[Prompt Injection](/predefined-evaluations/safeguarding/prompt-injection) | Grades whether the generated response is leaking any system prompt. |
 |[Jailbreak Detection](/predefined-evaluations/safeguarding/jailbreak) | Grades whether the user's prompt is an attempt to jailbreak (i.e. generate illegal or harmful responses). |
+  </Accordion>
+
+    <Accordion title="Sub-Query Evals">
+| Eval | Description |
+| ---- | ----------- |
+|[Sub-query Completeness](/predefined-evaluations/sub-query/sub-query-completeness) | Evaluate if the list of generated sub-questions comprehensively cover all aspects of the main question. |
   </Accordion>
 
   
