--- a/docs/predefined-evaluations/response-quality/response-relevance.mdx
+++ b/docs/predefined-evaluations/response-quality/response-relevance.mdx
@@ -1,6 +1,6 @@
 ---
 title: Response Relevance
-description: Measures how relevant the generated context was to the question specified.
+description: Measures how relevant the generated response was to the question specified.
 ---
 
 Response relevance is the measure of how relevant the generated response is to the question asked. It is a measure of how well the response addresses the question asked and if it contains any additional information that is not relevant to the question asked.
