updated docs for zeno integration

--- a/docs/integrations/visualization/zeno.mdx
+++ b/docs/integrations/visualization/zeno.mdx
@@ -146,7 +146,9 @@ You can see the evaluations using Zeno.
 
 Further, you can slice the data and create charts using Zeno.
 
-
+<Frame>
+  <img src="/assets/zeno.png" />
+</Frame>
 
 <CardGroup cols={2}>
   <Card
