--- a/examples/open_source_evaluator_tutorial.ipynb
+++ b/examples/open_source_evaluator_tutorial.ipynb
@@ -34,7 +34,8 @@
     "For now, we support these models for our open-source version.\n",
     "- GPT model (OPENAI API KEY is needed)\n",
     "- Claude (ANTHROPIC API KEY is needed)\n",
-    "- Azure OpenAI Service (AZURE API KEY is needed)"
+    "- Azure OpenAI Service (AZURE API KEY is needed)\n",
+    "- Mistral (MISTRAL API KEY is needed)"
    ]
   },
   {
@@ -419,7 +420,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "from uptrain import Settings\n",
     "settings = Settings(model = 'mistral/mistral-tiny', mistral_api_key=MISTRAL_API_KEY)\n",
     "eval_llm = EvalLLM(settings)"
@@ -500,7 +500,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
