--- a/examples/integrations/llamaindex.ipynb
+++ b/examples/integrations/llamaindex.ipynb
@@ -57,12 +57,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Install UpTrain and LlamaIndex\n",
-    "\n",
-    "\n",
-    "```bash\n",
-    "pip install uptrain llama_index\n",
-    "```"
+    "## Install UpTrain and LlamaIndex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "276331d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.0\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install -q uptrain llama-index"
    ]
   },
   {
@@ -82,7 +98,7 @@
     "import openai \n",
     "import pandas as pd\n",
     "\n",
-    "from llama_index import VectorStoreIndex, SimpleDirectoryReader, ServiceContext\n",
+    "from llama_index.core import VectorStoreIndex, SimpleDirectoryReader, ServiceContext\n",
     "from uptrain import Evals, EvalLlamaIndex, Settings"
    ]
   },
@@ -178,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "95b45738-baf4-45d0-8509-1c194f50508e",
    "metadata": {
     "tags": []
@@ -204,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "da17993b",
    "metadata": {},
    "outputs": [],
@@ -226,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "edd8d97d-33ae-4998-9942-761a2d393a19",
    "metadata": {
     "tags": []
@@ -252,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "d68268ce-c626-4ec7-8956-8cebf00cf919",
    "metadata": {
     "tags": []
@@ -278,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "1bc6fbb1-a524-473b-936b-f3bc9a9fec43",
    "metadata": {
     "tags": []
@@ -535,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "dcbf3119",
    "metadata": {},
    "outputs": [],
@@ -560,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "7bdfd3a3",
    "metadata": {},
    "outputs": [],
@@ -584,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "815243c7",
    "metadata": {},
    "outputs": [
@@ -609,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "23976958",
    "metadata": {},
    "outputs": [
