--- a/docs/llms/anyscale.mdx
+++ b/docs/llms/anyscale.mdx
@@ -26,7 +26,7 @@ settings = Settings(model='anyscale/mistralai/Mistral-7B-Instruct-v0.1', anyscal
 <Note>
     The model name should start with `anyscale/` for UpTrain to recognize you are using models hosted on Anyscale.
     
-    For example if you are using `gpt-3.5-turbo` via Anyscale, the model name should be `anyscale/gpt-35-turbo`
+    For example if you are using `mistralai/Mistral-7B-Instruct-v0.1` via Anyscale, the model name should be `anyscale/mistralai/Mistral-7B-Instruct-v0.1`
 </Note>
 
 We have used Mistral-7B-Instruct-v0.1 for this example. You can find a full list of available models [here](https://docs.endpoints.anyscale.com/category/supported-models).
