--- a/docs/dashboard/project.mdx
+++ b/docs/dashboard/project.mdx
@@ -7,8 +7,8 @@ title: Create a Project
 Using UpTrain Dashboard you can manage all your projects.
 
 There are 2 types of projects we support:
-  * **Evaluations:** Run evaluations on your datasets
-  * **Prompts:** Manage your prompts, evaluate and experiment  
+  * **[Evaluations](/dashboard/evaluations):** Run evaluations on your queries, documents and LLM responses
+  * **[Prompts](/dashboard/prompts):** Find the best way to ask questions to your LLM using prompt iteration, experimentation and evaluations
 
 ### How does it work?
 
@@ -26,8 +26,8 @@ There are 2 types of projects we support:
     * `Choose File:` Upload your Dataset
       Sample Dataset:
       ```jsonl
-      {"question":"","response":"","context":""}
-      {"question":"","response":"","context":""}
+      {"question":"", "response":"", "context":""}
+      {"question":"", "response":"", "context":""}
       ```
     * `Evaluation LLM:` Select an LLM to run evaluations
     <Frame>
