--- a/docs/llms/anyscale.mdx
+++ b/docs/llms/anyscale.mdx
@@ -23,6 +23,11 @@ ANYSCALE_API_KEY = "esecret_***********************"
 
 settings = Settings(model='anyscale/mistralai/Mistral-7B-Instruct-v0.1', anyscale_api_key=ANYSCALE_API_KEY)
 ```
+<Note>
+    The model name should start with `anyscale/` for UpTrain to recognize you are using models hosted on Anyscale.
+    
+    For example if you are using `mistralai/Mistral-7B-Instruct-v0.1` via Anyscale, the model name should be `anyscale/mistralai/Mistral-7B-Instruct-v0.1`
+</Note>
 
 We have used Mistral-7B-Instruct-v0.1 for this example. You can find a full list of available models [here](https://docs.endpoints.anyscale.com/category/supported-models).
 
