--- a/docs/tutorials/analyzing-failure-cases.mdx
+++ b/docs/tutorials/analyzing-failure-cases.mdx
@@ -21,7 +21,9 @@ Columns required:
 from uptrain import RcaTemplate, EvalLLM
 import json
 
-eval_llm = EvalLLM(openai_api_key=OPENAI_API_KEY)  # Insert your UpTrain key here
+OPENAI_API_KEY = "sk-*******"     # Insert your OpenAI key here
+
+eval_llm = EvalLLM(openai_api_key=OPENAI_API_KEY)  
 
 data = [{
         'question': 'Which team won the 2023 ICC Cricket World Cup?',
