rca tutorial improvements

--- a/examples/integrations/rag/rag_evaluations_uptrain_mistral.ipynb
+++ b/examples/integrations/rag/rag_evaluations_uptrain_mistral.ipynb
@@ -27,7 +27,7 @@
    "id": "2effbc0d",
    "metadata": {},
    "source": [
-    "# Evaluate RAG Pipeleine using UpTrain and Langfuse\n",
+    "# Evaluate RAG Pipeleine using UpTrain and Mistral\n",
     "Retrieval-augmented generation (RAG) is is a technique for enhancing the accuracy and reliability of LLMs with information retrieved from external sources. \n",
     "In this notebook we will be covering 2 main steps: \n",
     "1. Implementing RAG\n",
