minor changes in notebooks

--- a/examples/experiments/context_quality_comparison.ipynb
+++ b/examples/experiments/context_quality_comparison.ipynb
@@ -288,6 +288,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fb9b069b",
+   "metadata": {},
+   "source": [
+    "We have used UpTrain's **Context Relevance** evaluation to evaluate the quality of context retrieval, you can read more about it in our documentation [here](https://docs.uptrain.ai/predefined-evaluations/context-awareness/context-relevance)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0addf8e3-c16f-481e-9cfe-e2ffcc8a735d",
    "metadata": {
     "tags": []
