--- a/docs/dashboard/evaluations.mdx
+++ b/docs/dashboard/evaluations.mdx
@@ -55,6 +55,8 @@ You can look at the complete list of UpTrain's supported metrics [here](/predefi
   </Step>
 </Steps>
 
+<Note>UpTrain Dashboard is currently in Beta version. We would love your feedback to improve it.</Note>
+
 <CardGroup cols={1}>
   <Card
     title="Have Questions?"
