--- a/docs/dashboard/getting_started.mdx
+++ b/docs/dashboard/getting_started.mdx
@@ -12,6 +12,7 @@ You can use the dashboard to evaluate your LLM applications, view the results, m
 
 <Note>Before you start, ensure you have docker installed on your machine. If not, you can install it from [here](https://docs.docker.com/get-docker/). </Note>
 
+
 ### How to install?
 
 The following commands will download the UpTrain dashboard and start it on your local machine:
@@ -23,6 +24,8 @@ cd uptrain
 # Run UpTrain
 bash run_uptrain.sh
 ```
+
+<Note>UpTrain Dashboard is currently in Beta version. We would love your feedback to improve it.</Note>
 
 <CardGroup cols={1}>
   <Card
