--- a/docs/dashboard/project.mdx
+++ b/docs/dashboard/project.mdx
@@ -38,6 +38,8 @@ There are 2 types of projects we support:
 
 Now that you have created a project, you can run evaluations or experiment with prompts
 
+<Note>UpTrain Dashboard is currently in Beta version. We would love your feedback to improve it.</Note>
+
 <CardGroup cols={1}>
   <Card
     title="Have Questions?"
