fixed gpt 3.5 vs claude 2 experiment

--- a/examples/experiments/llm_openai_vs_gemma7b_experiment.ipynb
+++ b/examples/experiments/llm_openai_vs_gemma7b_experiment.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "**Overview**: In this notebook, we will compare different LLM providers - specifically GPT-4 vs Gemma-7B. We will be using around 30 randomly picked examples from the Financial QA dataset and evaluate the response on different criteria to determine which of the two models performs better.\n",
     "\n",
-    "We have used the following 4 metrics from UpTrain's library:\n",
+    "We have used the following 5 metrics from UpTrain's library:\n",
     "\n",
     "1. [Response Conciseness](https://docs.uptrain.ai/predefined-evaluations/response-quality/response-conciseness): Evaluates how concise the generated response is or if it has any additional irrelevant information for the question asked.\n",
     "\n",
@@ -43,7 +43,9 @@
     "\n",
     "3. [Factual Accuracy](https://docs.uptrain.ai/predefined-evaluations/context-awareness/factual-accuracy): Evaluates whether the response generated is factually correct and grounded by the provided context.\n",
     "\n",
-    "4. [Response Relevance](https://docs.uptrain.ai/predefined-evaluations/response-quality/response-relevance): Evaluates how relevant the generated response was to the question specified.\n",
+    "4. [Context Utilization](https://docs.uptrain.ai/predefined-evaluations/context-awareness/context-utilization): Evaluates how complete the generated response is for the question specified given the information provided in the context. Also known as Reponse Completeness wrt context\n",
+    "\n",
+    "5. [Response Relevance](https://docs.uptrain.ai/predefined-evaluations/response-quality/response-relevance): Evaluates how relevant the generated response was to the question specified.\n",
     "\n",
     "Each score has a value between 0 and 1. \n",
     "\n",
