--- a/docs/llms/ollama.mdx
+++ b/docs/llms/ollama.mdx
@@ -66,7 +66,7 @@ settings = Settings(model='ollama/gemma:2b')
 
 **Create an EvalLLM Evaluator**
 
-Before we can start using UpTrain, we need to create an EvalLLM Evaluator. You can do this by passing your API key to the `EvalLLM` constructor.
+Before we can start using UpTrain, we need to create an EvalLLM Evaluator.
 
 ```python
 eval_llm = EvalLLM(settings)
