--- a/examples/integrations/llm_providers/ollama.ipynb
+++ b/examples/integrations/llm_providers/ollama.ipynb
@@ -152,7 +152,7 @@
    "source": [
     "### Create an EvalLLM Evaluator\n",
     "\n",
-    "Before we can start using UpTrain, we need to create an EvalLLM Evaluator. You can do this by passing your API key to the `EvalLLM` constructor."
+    "Before we can start using UpTrain, we need to create an EvalLLM Evaluator. "
    ]
   },
   {
